--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -13,8 +13,9 @@
 }
 
 body {
-  font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
-  background-color: #333
+  font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell,
+    Helvetica Neue;
+  background-color: #00153f;
 }
 
 /**
@@ -22,39 +23,39 @@ body {
  */
 
 .bg-white {
-  background-color: var(--color-white)
+  background-color: var(--color-white);
 }
 
 .bg-red {
-  background-color: var(--color-red)
+  background-color: var(--color-red);
 }
 
 .bg-blue {
-  background-color: var(--color-blue)
+  background-color: var(--color-blue);
 }
 
 .bg-yellow {
-  background-color: var(--color-yellow)
+  background-color: var(--color-yellow);
 }
 
 .bg-green {
-  background-color: var(--color-green)
+  background-color: var(--color-green);
 }
 
 .bg-multicolor {
-  background-color: var(--color-multicolor)
+  background-color: var(--color-multicolor);
 }
 
 .bg-hints {
-  background-color: var(--color-hints)
+  background-color: var(--color-hints);
 }
 
 .bg-strikes {
-  background-color: var(--color-strikes)
+  background-color: var(--color-strikes);
 }
 
 .bg-gray-light {
-  background-color: var(--color-gray-light)
+  background-color: var(--color-gray-light);
 }
 
 /**
@@ -62,47 +63,47 @@ body {
  */
 
 .b--white {
-  border-color: color-mod(var(--color-white) shade(20%))
+  border-color: color-mod(var(--color-white) shade(20%));
 }
 
 .b--red {
-  border-color: color-mod(var(--color-red) shade(20%))
+  border-color: color-mod(var(--color-red) shade(20%));
 }
 
 .b--blue {
-  border-color: color-mod(var(--color-blue) shade(20%))
+  border-color: color-mod(var(--color-blue) shade(20%));
 }
 
 .b--yellow {
-  border-color: color-mod(var(--color-yellow) shade(20%))
+  border-color: color-mod(var(--color-yellow) shade(20%));
 }
 
 .b--green {
-  border-color: color-mod(var(--color-green) shade(20%))
+  border-color: color-mod(var(--color-green) shade(20%));
 }
 
 .b--multicolor {
-  border-color: color-mod(var(--color-multicolor) shade(20%))
+  border-color: color-mod(var(--color-multicolor) shade(20%));
 }
 
 .b--hints {
-  border-color: color-mod(var(--color-hints) shade(20%))
+  border-color: color-mod(var(--color-hints) shade(20%));
 }
 
 .b--strikes {
-  border-color: color-mod(var(--color-strikes) shade(20%))
+  border-color: color-mod(var(--color-strikes) shade(20%));
 }
 
 .b--gray-light {
-  border-color: color-mod(var(--color-gray-light) shade(20%))
+  border-color: color-mod(var(--color-gray-light) shade(20%));
 }
 
 /**
  * Animations
- */ 
+ */
 
 .grow {
-  transition: transform .1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 
 .grow:hover {
