--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body {
   font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell,
     Helvetica Neue;
   background-color: #00153f;
+  font-family: "Kalam", cursive;
 }
 
 .bg-main {
