--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
 :root {
+  --color-main: #1824a2;
+  --color-main-dark: #00153f;
+
   --color-white: #f4f6f7;
   --color-red: #ec7063;
   --color-blue: #5dade2;
@@ -15,12 +18,21 @@
 body {
   font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell,
     Helvetica Neue;
-  background-color: #00153f;
+  color: #f0f0f0;
+  background-color: var(--color-main-dark);
   font-family: "Kalam", cursive;
 }
 
+.bg-main-dark {
+  background-color: var(--color-main-dark);
+}
+
 .bg-main {
-  background-color: #00153f;
+  background-color: var(--color-main);
+}
+
+.b--main {
+  border-color: var(--color-main);
 }
 
 /**
