--- a/styles/style.css
+++ b/styles/style.css
@@ -90,6 +90,20 @@ body {
 }
 
 .bg-multicolor {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.bg-multicolor:after {
+  content: "";
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  z-index: -1;
+
   background: conic-gradient(
     var(--color-white) 0deg 72deg,
     var(--color-blue) 72deg 144deg,
@@ -97,6 +111,19 @@ body {
     var(--color-red) 216deg 288deg,
     var(--color-yellow) 288deg 360deg
   );
+  animation: Rotation 300s ease infinite;
+}
+
+@keyframes Rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .bg-hints {
