--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ body {
   width: 100%;
   height: 100%;
   color: #f0f0f0;
-  background: black;
+  background: color-mod(var(--color-blue) shade(90%));
 }
 
 /**
