--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@
 
 html,
 body {
-  font-family: "Kalam", cursive;
+  font-family: "Kalam", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   height: 100%;
   color: #f0f0f0;
