Optimistic update on game when playing

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -11,3 +11,17 @@
     font-size: 100%;
   }
 }
+
+@keyframes OpacityPulse {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
