--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,12 @@
   --color-gray-light: #ddd;
 }
 
+@import "./tachyons.css";
+@import "./fonts.css";
+@import "./patterns.css";
+@import "./animations.css";
+@import "./popover.css";
+
 html,
 body {
   font-family: "Kalam", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
