--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 :root {
   --color-main: #1824a2;
   --color-main-dark: #00153f;
-  --color-cta: #fff776;
 
   --color-white: #f4f6f7;
   --color-red: #ec7063;
@@ -52,7 +51,7 @@ body {
 }
 
 .bg-cta {
-  background-color: var(--color-cta);
+  background-color: var(--color-yellow);
 }
 
 .txt-yellow {
