--- a/styles/tachyons-overrides.css
+++ b/styles/tachyons-overrides.css
@@ -41,6 +41,14 @@
     width: 3rem;
   }
 
+  .h3\.5-l {
+    height: 7rem;
+  }
+
+  .w3\.5-l {
+    width: 7rem;
+  }
+
   .h4\.5-l {
     height: 12rem;
   }
