--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   --color-main: #1824a2;
   --color-main-dark: #001030;
+  --color-lavender: #989fc1; /* It's blueish but has an excellent contrast ratio on main-dark  */
 
   --color-white: #f4f6f7;
   --color-red: #ec7063;
@@ -36,6 +37,10 @@ body {
 
 .main-dark {
   color: var(--color-main-dark);
+}
+
+.lavender {
+  color: var(--color-lavender);
 }
 
 /**
