--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,7 +21,7 @@
 @import "./animations.css";
 @import "./popover.css";
 
-@import "../node_modules/rc-slider/assets/index.css";
+@import "../../node_modules/rc-slider/assets/index.css";
 
 html,
 body {
