--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,10 @@ body ::-webkit-scrollbar {
   color: var(--color-lavender);
 }
 
+.bg-lavender {
+  background-color: var(--color-lavender);
+}
+
 /**
  * Background colors
  */
@@ -220,4 +224,12 @@ body ::-webkit-scrollbar {
 .grow:hover {
   transform: scale(1.05);
   z-index: 2;
+}
+
+/**
+ * Shadows
+ */
+
+.shadow-light { 
+  box-shadow: 0px 2px 12px 0px rgba( 255, 255, 255, .4 )
 }
