--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -53,6 +53,11 @@ body ::-webkit-scrollbar {
   background-color: var(--color-lavender);
 }
 
+
+.b--lavender {
+  border-color: var(--color-lavender);
+}
+
 /**
  * Background colors
  */
