--- a/src/styles/tachyons-overrides.css
+++ b/src/styles/tachyons-overrides.css
@@ -32,8 +32,17 @@
   width: 12rem;
 }
 
-.bw0\.5 {
-  border-width: 0.075rem;
+@media screen and (min-width: 50em) {
+  /**
+  * Padding - Medium Screens
+  */
+  .ph6\.5-m {
+    padding-left: 10rem; padding-right: 10rem;
+  }
+
+  .pr6\.5-m {
+    padding-right: 10rem;
+  }
 }
 
 @media screen and (min-width: 60em) {
@@ -67,6 +76,17 @@
 
   .w4\.5-l {
     width: 12rem;
+  }
+
+  /**
+  * Padding - Large Screens
+  */
+  .ph6\.5-l {
+    padding-left: 12rem; padding-right: 12rem;
+  }
+
+  .pr6\.5-l {
+    padding-right: 12rem;
   }
 }
 
@@ -105,4 +125,8 @@
  * Borders
  */
 
- .bw1\.5 { border-width: 0.15rem; }
+.bw0\.5 {
+  border-width: 0.075rem;
+}
+
+.bw1\.5 { border-width: 0.15rem; }
