--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,6 +28,7 @@
 @import "./popover.css";
 
 @import "../../node_modules/rc-slider/assets/index.css";
+@import "../../node_modules/nprogress/nprogress.css";
 
 html,
 body {
@@ -45,6 +46,10 @@ body ::-webkit-scrollbar {
 
 button {
   background-color: white;
+}
+
+#nprogress .bar {
+  background: var(--color-yellow) !important;
 }
 
 /**
