--- a/src/styles/tachyons-overrides.css
+++ b/src/styles/tachyons-overrides.css
@@ -1,4 +1,4 @@
-/**
+/*
  * This adds a few intermdiate Tachyons style classes to handle special cases.
  * Definitely not ideal. We should define our own scales & such using css variables.
  * @see https://github.com/tachyons-css/tachyons-custom
@@ -33,15 +33,21 @@
 }
 
 @media screen and (min-width: 50em) {
-  /**
-  * Padding - Medium Screens
-  */
+  /*
+   * Padding - Medium Screens
+   */
   .ph6\.5-m {
     padding-left: 10rem; padding-right: 10rem;
   }
 
   .pr6\.5-m {
     padding-right: 10rem;
+  }
+}
+
+@media screen and (min-width: 80em) { 
+  .ph8-l {
+    padding-left: 16rem; padding-right: 16rem;
   }
 }
 
@@ -79,7 +85,7 @@
   }
 }
 
-/**
+/*
  * Typography
  */
 
@@ -91,7 +97,11 @@
   white-space: pre-line;
 }
 
-/**
+.f8 {
+  font-size: .6rem;
+}
+
+/*
  * Flexbox
  */
 .flex-square {
@@ -107,7 +117,7 @@
   padding-top: 100%;
 }
 
-/**
+/*
  * Sizes
  */
 .mh-30vh {
@@ -118,7 +128,7 @@
   top: -1.5rem
 }
 
-/**
+/*
  * Borders
  */
 
