--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
   --color-blue: #5dade2;
   --color-yellow: #f4d03f;
   --color-green: #52be80;
+  --color-orange: #ed8936;
 
   --color-white-dark: #4a4a4a;
   --color-red-dark: #701c13;
@@ -103,6 +104,11 @@ button {
   text-shadow: 0 0 2px color-mod(var(--color-green) lightness(90%));
 }
 
+.txt-orange-dark {
+  color: color-mod(var(--color-orange) lightness(15%));
+  text-shadow: 0 0 2px color-mod(var(--color-orange) lightness(90%));
+}
+
 .txt-multicolor-dark {
   color: color-mod(var(--color-white) lightness(15%));
   text-shadow: 0 0 2px color-mod(var(--color-white) lightness(90%));
@@ -175,6 +181,15 @@ button {
     color-mod(var(--color-green) lightness(70%)),
     var(--color-green),
     color-mod(var(--color-green) shade(20%))
+  );
+}
+
+.bg-orange {
+  background: linear-gradient(
+    to bottom right,
+    color-mod(var(--color-orange) lightness(70%)),
+    var(--color-orange),
+    color-mod(var(--color-orange) shade(30%))
   );
 }
 
