--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,6 +46,11 @@ body ::-webkit-scrollbar {
   display: none;
 }
 
+.font-regular {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 button {
   background-color: white;
 }
