--- a/src/styles/tachyons-overrides.css
+++ b/src/styles/tachyons-overrides.css
@@ -45,7 +45,7 @@
   }
 }
 
-@media screen and (min-width: 80em) { 
+@media screen and (min-width: 80em) {
   .ph8-l {
     padding-left: 16rem; padding-right: 16rem;
   }
@@ -99,6 +99,12 @@
 
 .f0 {
   font-size: 4rem;
+}
+
+@media screen and (min-width: 60em) {
+  .f0-l {
+    font-size: 4rem;
+  }
 }
 
 .f8 {
