--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,9 +23,11 @@
   --color-gray-light: #aaa;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
 @import "./tachyons.css";
 @import "./tachyons-overrides.css";
-@import "./fonts.css";
 @import "./animations.css";
 @import "./popover.css";
 
@@ -34,7 +36,7 @@
 
 html,
 body {
-  font-family: "Kalam", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Kalam", "Balsamiq Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   height: 100%;
@@ -374,13 +376,13 @@ button {
 @media screen and (min-width: 1024px) and (min-height: 600px) {
   .game {
     zoom: 1.2
-  }  
+  }
 }
 
 
 @media screen and (min-width: 1400px) and (min-height: 800px) {
   .game {
     zoom: 1.3
-  }  
+  }
 }
 
