--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,7 +23,7 @@
   --color-gray-light: #aaa;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
 @import "./tachyons.css";
@@ -36,7 +36,7 @@
 
 html,
 body {
-  font-family: "Kalam", "Balsamiq Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Kalam", "Caveat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100%;
   height: 100%;
