Make strike extra visible in the log with red-highlighting.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,6 +82,9 @@ button {
   border-color: var(--color-lavender);
 }
 
+.txt-strike {
+  color: var(--color-strikes);
+}
 .txt-red {
   color: var(--color-red);
 }
