--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
   --color-main: #1824a2;
   --color-main-dark: #001030;
   --color-lavender: #989fc1; /* It's blueish but has an excellent contrast ratio on main-dark  */
-
+  --color-review-comment: #ffaa01;
   --color-white: #f4f6f7;
   --color-red: #ec7063;
   --color-blue: #5dade2;
